--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "@types/express": "^5.0.1",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "rss-parser": "^3.13.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
