--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "main": "server.ts",
+  "scripts": {
+    "dev": "tsx watch server.ts"
+  },
   "dependencies": {
     "@types/express": "^5.0.1",
     "express": "^5.1.0",
